Say which values a position holds and how much was read as one answer
Review found the second answer handed out beside the first and defaulted the
wrong way. `speaksFor` answered from a map keyed by the positions the reading
named, so a reading that named none — a walk that fell over, a caller that
never asked for one — said of every position that the values it holds are the
whole of what its rules leave. Which is the widest claim there is, made where
nothing was read.

So the two are one value. `admits` answers `EveryRuleRead` or `SomeRuleUnread`,
each carrying the same set, and a caller cannot take the set and leave the
qualifier — which is what `Held` is here to stop happening to a bound, one
question earlier.

What tells a reading that ran from one that did not is a fact of its own.
`everyClauseRead` was to hand and is not it: that is one reading's account of
the clauses it was handed, and a clause it could not turn into an obligation is
one this reading may have taken in whole, so borrowing it would settle each
reading's completeness by a fragment that is not its own. What was missing is
whether every clause reached the readings at all — false where the walk fell
over, and false where a clause could not be typed, since such a clause reaches
no reading and no reading can know which position it was about.

`FieldDomains.NONE` answers `SomeRuleUnread` for the same reason. Nothing known
of any field is not a value with nothing written about it, and every caller
holding it either had no declaration to read or chose not to read one.

Both were put wrong to see what noticed: an untypeable clause counted as
gathered, and `NONE` claiming a finished reading. Each took down the one case
written for it and nothing else.

`ValueUniverse` asks `TypeOps` which sums are enumerations rather than asking
`Carrier`. The two questions were already separate — one is which values a type
has, the other whether it has an order-preserving count — and answering the
first through the seco